--- a/src/templates/screens/TemplateList.vm
+++ b/src/templates/screens/TemplateList.vm
@@ -5,31 +5,38 @@ $page.setTitle("Template list")
 #set ($user = $data.User)
 #if (($module.getPrivateTemplates($user, $issueType).isEmpty()) && ($module.getGlobalTemplates($issueType).isEmpty()))
    #set ($noTemplates = "true")
+#elseif (($module.getPrivateTemplates($user, $issueType).isEmpty()) || ($module.getGlobalTemplates($issueType).isEmpty()))
+   #set ($someTemplates = "true")
 #end
 
-<div class="app" id="templateList">
-<form method="post" action="$link.setPage("TemplateList.vm").setAction("TemplateList")">
-<input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="TemplateList.vm" />
-
-<h2>$page.Title</h2>
-
-<div class="functnbar">
+#macro (TemplateListBar $val)
+<div class="functnbar$val">
 <table cellpadding="4" cellspacing="0" border="1">
  <tr>
   <td class="firstchild">
   #if ($user.UserId)
   <input type="submit" value="Create new" name="eventSubmit_doCreatenew" />&#160;
-  #if ($noTemplates.equals("false"))
+  #if ($someTemplates.equals("true"))
   <input type="submit" value="Delete selected" name="eventSubmit_doDeletetemplates" />
   #end
   #end
-  #if ($noTemplates.equals("false"))
+  #if ($someTemplates.equals("true"))
   &#160;<input type="submit" value="Cancel" name="eventSubmit_doCancel" />
   #end
   </td>
  </tr>
 </table>
 </div>
+#end
+
+<div class="app" id="templateList">
+
+<h2>$page.Title</h2>
+
+<form method="post" action="$link.setPage("TemplateList.vm").setAction("TemplateList")">
+<input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="TemplateList.vm" />
+
+#TemplateListBar("")
 
 <h3>Stored Templates</h3>
 
@@ -41,8 +48,6 @@ $page.setTitle("Template list")
     </strong></p>
 #else
   
-##  FIXME: add prev/next nav       <p>&#171; previous | 1 of 1 | next &#187;</p>
-
 <table width="100%" border="1" cellspacing="2" cellpadding="3">
   <tr>
   <th nowrap="nowrap">
@@ -52,7 +57,7 @@ $page.setTitle("Template list")
   <th>Template name</th>
   <th>Template desc</th>
   <th>Location</th>
-  <th>Initiated by</th>
+  <th>Created by</th>
   </tr>
 
 #foreach ($template in $module.getPrivateTemplates($user, $issueType))
@@ -60,14 +65,20 @@ $page.setTitle("Template list")
   <td><input type="checkbox" name="delete_$template.IssueId" /></td>
   #set ($editLink = $link.setPathInfo("issue_id", $template.IssueId.toString()).setPage("SaveTemplate.vm").toString())
   <td><a href="$editLink">$template.TemplateInfo.Name</a></td>
-  <td>#if($template.TemplateInfo.Description)  $template.TemplateInfo.Description #else &#160; #end</td>
+  <td>
+    #if($template.TemplateInfo.Description)
+      $template.TemplateInfo.Description
+    #else
+      &#160;
+    #end
+  </td>
   <td>$template.templateInfo.Scope.Name
      #if (!$template.TemplateInfo.Approved)
        (until approved)
      #end
   </td>
-   #set ($createdUser = $template.CreatedBy)
    <td>
+   #set ($createdUser = $template.CreatedBy)
    #if ($createdUser)
    <a href="mailTo:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a>
    #else
@@ -104,8 +115,8 @@ $page.setTitle("Template list")
        (until approved)
      #end
   </td>
-   #set ($createdUser = $template.CreatedBy)
    <td>
+   #set ($createdUser = $template.CreatedBy)
    #if ($createdUser)
      <a href="mailTo:$createdUser.Email">$createdUser.FirstName $createdUser.LastName</a>
    #else
@@ -117,21 +128,9 @@ $page.setTitle("Template list")
 
   </table>
 
-##  FIXME: add prev/next nav       <p>&#171; previous | 1 of 1 | next &#187;</p>
-
-<div class="functnbar2">
-<table cellpadding="4" cellspacing="0" border="1">
- <tr>
-  <td class="firstchild">
-  #if ($user.UserId)
-  <input type="submit" value="create new" name="eventSubmit_doCreatenew" />&#160;
-  <input type="submit" value="Delete selected" name="eventSubmit_doDeletetemplates" />  
-  #end
-  &#160;<input type="submit" value="Cancel" name="eventSubmit_doCancel" />
-  </td>
- </tr>
-</table>
-</div>
-
 #end
+
+#TemplateListBar("2")
+
+</form>
 </div>
