had to add issueType to methods in ScarabModule in order to avoid grabbing all the RModuleAttributes associated with a module when building lists for Reports.  Chain reaction to several other classes.
Also removed the caching of RMA's in ScarabModule.  might want to add this back,
but the addition of issueTypes complicates it quite a bit.


Issue number:
Obtained from:
Submitted by:
Reviewed by:
Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/screens/reports/Step3_1a.vm
+++ b/src/templates/screens/reports/Step3_1a.vm
@@ -14,9 +14,9 @@
 <tr>
 <th width="120">report date</th>
  <td>
+    #fieldErrorMsg($intakeReport.NewDate "")
     <input type="text" size="20" name="$intakeReport.NewDate.Key"
-        value="$intakeReport.NewDate" />
-    <p>Leave blank for current date/time</p>
+        value="$intakeReport.NewDate" /> Leave blank for current date/time
 </td>
 </tr>
 <tr>
