--- a/src/templates/screens/admin/ArtifactTypeCreate.vm
+++ b/src/templates/screens/admin/ArtifactTypeCreate.vm
@@ -1,33 +1,40 @@
-$page.setTitle("Attribute Editor")
+$page.setTitle("Create artifact type")
 
 #set ($module = $scarabR.CurrentModule)
 #set ($issueType = $scarabR.IssueType)
 #set ($group = $intake.IssueType.mapTo($issueType))
 
+#macro (ArtifactTypeCreateBar $var)
+<div class="functnbar">
+  <table cellpadding="4" cellspacing="0" border="1">
+  <tr>
+    <td class="firstchild">
+      <input type="submit" value="Create" name="eventSubmit_doCreatenew" />&#160;
+      <input type="submit" value="Cancel" name="eventSubmit_doCancel"  />&#160;
+    </td>
+    <td>
+      &#160;<input type="submit" value="Back" name="eventSubmit_doBack"  />
+    </td>
+  </tr>
+  </table>
+</div>
+#end
+
 <div class="app" id="div2-1-4-0">
 
-<h2>Create artifact type</h2>
+<h2>$page.Title</h2>
 
 <form method="get" action="$link.setPage("admin,ArtifactTypeCreate.vm")">
 <input type="hidden" name="action" value="admin.GlobalArtifactTypes" />
 <input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="admin,GlobalArtifactTypeShow.vm" />
 <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="admin,ManageArtifactTypes.vm" />
+<input type="hidden" name="$scarabG.Constant.BACK_TEMPLATE" value="admin,GlobalArtifactTypeShow.vm" />
 
-<div class="functnbar">
-    <table cellpadding="4" cellspacing="0" border="1">
-    <tr>
-    <td class="firstchild">
-    <div>Screen options:</div>
-      <input type="submit" value="Create" name="eventSubmit_doCreatenew" />&#160;
-      <input type="submit" value="Cancel" name="eventSubmit_doCancel"  />
-    </td>
-  </tr>
-  </table>
-</div>
+#ArtifactTypeCreateBar("")
 
 <h3>Artifact type details</h3>
 <div class="axial">
-    <table border="0" cellspacing="2" cellpadding="3">
+  <table border="0" cellspacing="2" cellpadding="3">
     <tr>
     <th>Artifact type name</th>
     <td><input type="text" size="25" name="$group.Name.Key" value="$!group.Name.Value"/>
@@ -37,20 +44,10 @@ $page.setTitle("Attribute Editor")
     <th>Artifact type desc</th>
     <td><textarea rows="4" cols="40" name="$group.Description.Key">$!group.Description.Value</textarea></td>
     </tr>
-    </table>
-</div>
-
-<div class="functnbar2">
-    <table cellpadding="4" cellspacing="0" border="1">
-    <tr>
-    <td class="firstchild">
-    <div>Screen options:</div>
-      <input type="submit" value="Create" name="eventSubmit_doCreatenew" />&#160;
-      <input type="submit" value="Cancel" name="eventSubmit_doCancel"  />
-    </td>
-  </tr>
   </table>
 </div>
+
+#ArtifactTypeCreateBar("2")
 
 $intake.declareGroups()
 </form>
