--- a/src/templates/screens/admin/ManageArtifactTypes.vm
+++ b/src/templates/screens/admin/ManageArtifactTypes.vm
@@ -1,18 +1,12 @@
-$page.setTitle("Attribute Editor")
-     
-<div class="app" id="div2-1-4-0">
+$page.setTitle("Manage artifact types")
 
-<h2>Manage artifact types</h2>
+#set ($issueTypes = $scarabR.CurrentModule.AvailableIssueTypes)
 
-<form method="get" action="$link.setPage("admin,ManageArtifactTypes.vm")">
-<input type="hidden" name="action" value="admin.ModifyModuleAttributes" />
-<input type="hidden" name="$scarabR.Constant.NEXT_TEMPLATE" value="admin,ManageArtifactTypes.vm" />
-
+#macro (ManageArtifactTypesBar $var)
 <div class="functnbar">
   <table cellpadding="4" cellspacing="0" border="1">
     <tr>
     <td class="firstchild">
-      <div>Screen options:</div>
       <input type="submit" value="Save" name="eventSubmit_doManageissuetypes" />&#160;
       <input type="submit" value="Delete" name="eventSubmit_doDeletemoduleissuetype" />&#160;
       <input type="submit" value="Cancel" />
@@ -20,7 +14,6 @@ $page.setTitle("Attribute Editor")
     <td nowrap="nowrap">
       <div>Artifact type management:</div>
       
-#set ($issueTypes = $scarabR.CurrentModule.AvailableIssueTypes)
 #if (!$issueTypes.isEmpty())
       <input type="submit" value="Add existing" name="eventSubmit_doGotoartifactselect" />&#160;
 #end
@@ -30,7 +23,18 @@ $page.setTitle("Attribute Editor")
     </tr>
   </table>
 </div>
-                  
+#end
+
+<div class="app" id="div2-1-4-0">
+
+<h2>$page.Title</h2>
+
+<form method="post" action="$link.setPage("admin,ManageArtifactTypes.vm")">
+<input type="hidden" name="action" value="admin.ModifyModuleAttributes" />
+<input type="hidden" name="$scarabR.Constant.NEXT_TEMPLATE" value="admin,ManageArtifactTypes.vm" />
+
+#ManageArtifactTypesBar("")
+
 <h3>Artifact types</h3>
 
 <table width="100%" border="1" cellspacing="2" cellpadding="3">
@@ -57,27 +61,7 @@ $page.setTitle("Attribute Editor")
 #end
 </table>
 
-<div class="functnbar2">
-  <table cellpadding="4" cellspacing="0" border="1">
-    <tr>
-    <td class="firstchild">
-      <div>Screen options:</div>
-      <input type="submit" value="Save" name="eventSubmit_doManageissuetypes" />&#160;
-      <input type="submit" value="Delete" name="eventSubmit_doDeletemoduleissuetype" />&#160;
-      <input type="submit" value="Cancel" />
-    </td>
-    <td nowrap="nowrap">
-      <div>Artifact type management:</div>
-#set ($issueTypes = $scarabR.CurrentModule.AvailableIssueTypes)
-#if (!$issueTypes.isEmpty())
-      <input type="submit" value="Add existing" name="eventSubmit_doGotoartifactselect" />&#160;
-#end
-      <!-- FIXME: <input type="submit" value="Copy" />&#160; -->
-      <!-- FIXME: <input type="submit" value="Resort" /> -->
-    </td>
-    </tr>
-  </table>
-</div>
+#ManageArtifactTypesBar("2")
         
 <p>* Maximum of five Artifact types in left hand navigation (first five
 selected will appear).</p>
