--- a/src/templates/screens/MoveIssue2.vm
+++ b/src/templates/screens/MoveIssue2.vm
@@ -112,6 +112,7 @@ $issue.Module.Name
     #foreach ($attr in $matchingAttributes)
      #indexedRows($velocityCount)
      <td>$attr.Attribute.Name
+## !FIXME! jdm add $scarabR.CurrentIssueType to args or get it some other way?
       #set ($displayValue = $module.getRModuleAttribute($attr.Attribute).getDisplayValue())
       #if (!$attr.Attribute.Name.equals($displayValue))
        ($displayValue)
@@ -133,6 +134,7 @@ $issue.Module.Name
    #foreach ($attr in $matchingAttributes)
     #indexedRows($velocityCount)
     <td>$attr.Attribute.Name
+## !FIXME! jdm add $scarabR.CurrentIssueType to args or get it some other way?
      #set ($displayValue = $newModule.getRModuleAttribute($attr.Attribute).getDisplayValue())
      #if (!$attr.Attribute.Name.equals($displayValue))
       ($displayValue)
