--- a/src/templates/screens/Index.vm
+++ b/src/templates/screens/Index.vm
@@ -11,10 +11,7 @@ $l10n.ToAccessFunctions1
 <a href="$link.setPage("Login.vm")">$l10n.Login</a>. $l10n.ToAccessFunctions2
 </p>
 
-<p>
-$l10n.IfYouAreNotRegistered 
-<a href="$link.setPage("Register.vm")">$l10n.CreateAnAccount</a>.
-</p>
+<p>$l10n.format('IfYouAreNotRegistered', $link.setPage('Register.vm'))</p>
 </td>
 
 #elseif (!$scarabR.CurrentModule)
