* src/templates/screens/Login.vm   Use a fully qualified reference to the submit button as requested by   Andrew Herron <andrew.herron@ephox.com>:
    "Some browsers (Opera is the one I use) require full references to
    buttons, and so give a javascript error without the 'document.login'
    in front of it."

--- a/src/templates/screens/Login.vm
+++ b/src/templates/screens/Login.vm
@@ -42,7 +42,7 @@
 </div>
 
 <div class="functnbar2">
-<input type="submit" name="eventSubmit_doLogin" value="$l10n.Login" onclick="eventSubmit_doLogin.disabled=true;document.login.submit()" />
+<input type="submit" name="eventSubmit_doLogin" value="$l10n.Login" onclick="document.login.eventSubmit_doLogin.disabled=true;document.login.submit()" />
 </div>
 
 $intake.declareGroups()
