* AssignIssue.java: commitAssigneeChanges(), doDone() and doCancel() replaced by doSave(). check for single issue to which to assign issues. if it does not exist, use issue list for multiple assign.  No longer need to override the doDone and doCancel methods. * ModifyIssue.java: doEditassignees(): set issueId parameter for single issue assign. * screens/AssignIssue.java: getTitle(): if single issue assign, title should be "with this issue" single * AssignIssue.vm: check for issueId parameter for single issue assign. * ViewIssueBody.vm: pass correct cancelPage parameter. * ScarabBundle_en_US.properties: add NoModulesMatch resource Issue number:  17627

--- a/src/templates/viewIssue/ViewIssueBody.vm
+++ b/src/templates/viewIssue/ViewIssueBody.vm
@@ -16,6 +16,11 @@
 <input type="hidden" name="id" value="$currentIssueId" />
 <input type="hidden" name="$scarabG.Constant.OTHER_TEMPLATE" value="MoveIssue.vm" />
 <input type="hidden" name="tab" value="$tab" />
+#if ($issueList)
+   <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="ViewIssueLong.vm" />
+#else
+   <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="ViewIssue.vm" />
+#end
 
 #if ($showCopyButton || $showMoveButton)
 <div class="functnbar">
