Added round robin and switched to velocity.

--- a/src/org/objectweb/carol/cmi/compiler/ClusterStubTemplate.vm
+++ b/src/org/objectweb/carol/cmi/compiler/ClusterStubTemplate.vm
@@ -90,7 +90,7 @@ public class ${className}_Cluster implements ClusterStub, Externalizable, $class
 					Trace.out("cluster invocation of " + "$mc.getMthName()()");
 				}
 #if ($mc.returnsVoid())
-				$stub.$mc.getMthName()($mc.getParamNamesString());
+				stub.$mc.getMthName()($mc.getParamNamesString());
 				return;
 #else
 				$mc.getReturnTypeName() result = stub.$mc.getMthName()($mc.getParamNamesString());
