--- a/src/templates/basic_email/NewIssueNotification.vm
+++ b/src/templates/basic_email/NewIssueNotification.vm
@@ -1,6 +1,6 @@
 $l10n.YouCanViewIssue:
 
-    $link.getIssueIdAbsoluteLink($issue)
+      $link.getIssueIdLink($issue)    
 
 $l10n.Type        
  $issue.RModuleIssueType.DisplayName
