Reports cells with individual dates in the future are currently meaningless, as Scarab isn't (yet) in the crystal ball business:
* src/java/org/tigris/scarab/reports/ReportTableModel.java
  getValueAt(int, int): Return the empty string for dates in the
  future.


* src/java/org/tigris/scarab/screens/DataExport.java
  NO_CONTENT: Changed the value of "-------" to "", as the empty
  string is dealt better with by spreadsheet programs (e.g. Excel).


* src/templates/macros/ReportMacro.vm
  Insert a non-breaking space when displaying report cells which have
  the value of the empty string.

Issue: PCN # 17938

--- a/src/templates/macros/ReportMacro.vm
+++ b/src/templates/macros/ReportMacro.vm
@@ -160,8 +160,10 @@
      <td>
      #if ($model.isDate($cell))
         $format.getDate('yyyy-MM-dd HH:mm', $cell)
+     #elseif ($cell && $cell.toString() != '')
+         $cell
      #else
-        $cell
+         &nbsp;
      #end
      </td>
    #end
