--- a/src/templates/screens/admin/GlobalAttributeEdit.vm
+++ b/src/templates/screens/admin/GlobalAttributeEdit.vm
@@ -37,7 +37,7 @@
 <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="$cancelTemplate" />
 <input type="hidden" name="groupId" value="$!data.Parameters.getString("groupId")" />
 <input type="hidden" name="issueTypeId" value="$!data.Parameters.getString("issueTypeId")" />
-<input type="hidden" name="pageNum" value="$!data.Parameters.getString("pageNum")" />
+<input type="hidden" name="pageNum" value="$!data.Parameters.getInt("pageNum",1)" />
 
 <div class="functnbar">
 #if (!$createNew)
