Fixed "Export results to" and "Process results" drop-downs to not lose query criteria.  Made the bottom version of the "Process results" drop-down recognized.
* src/templates/screens/IssueList.vm
  #queryFunctionBar(): Change param name from "$var" to "$id".

  #exportFormats(), #processQueryResults(): Dropped doSearch action
  for the default action (doPerform).

* src/java/org/tigris/scarab/actions/Search.java
  doPerform(): New method, containing most of the body of the previous
  incarnation of doSearch().  Now looks at more than the first CGI
  parameter for the "next" field.

  doSearch(): Wrapped doPerform().  Added JavaDoc.

* src/java/org/tigris/scarab/util/ScarabUtil.java
  findValue(RunData, String): Adapted from ExportFormat.determine().

* src/java/org/tigris/scarab/actions/ConfigureReport.java
  doGeneratereport(): Switched to new findValue() API.

* src/java/org/tigris/scarab/screens/DataExport.java
  doBuildTemplate(): Switched to new findValue() API.

* src/java/org/tigris/scarab/util/export/ExportFormat.java
  KEY_NAME: New constant for "format".

  determine(): Moved to ScarabUtil.

Issue: PCN17856, PCN17846, PCN18066
Reviewed by: Elicia David

--- a/src/templates/screens/IssueList.vm
+++ b/src/templates/screens/IssueList.vm
@@ -18,16 +18,16 @@
 #end
 
 ## The functions used to control the current query.
-#macro (queryFunctionBar $var)
+#macro (queryFunctionBar $id)
 #if ($queryString)
-<div class="functnbar$var">
+<div class="functnbar$id">
 #if ($searchType == 'advanced' && $scarabR.hasPermission($scarabG.Permission.USER__EDIT_PREFERENCES))
 <input type="submit" value="$l10n.SaveQuery" name="eventSubmit_doRedirecttosavequery" />&#160;
 <input type="submit" value="$l10n.RefineQuery" name="eventSubmit_doRefinequery" />&#160;
 #end
-#exportFormats('eventSubmit_doSearch')
+#exportFormats('')
 #if ($issueListSize <= 10 && (!$mitlist || $mitlist.isSingleModuleIssueType()))
-    #processQueryResults('eventSubmit_doSearch')
+  #processQueryResults('')
 #end
 </div>
 #end
