edited text for UserQuery.vm to include the My issues query option and to reflect current UI
Issue 17925
reviewed by tberry

--- a/src/templates/screens/help/UserQuery.vm
+++ b/src/templates/screens/help/UserQuery.vm
@@ -39,11 +39,13 @@
   <h4><a name="bar" id="bar">$l10n.QueryBar</a></h4>
   <p>$l10n.UQP7</p>
   <ul>
-    <li>$l10n.UQP8S1<strong>$l10n.Go</strong> $l10n.button.</li>
+    <li>$l10n.UQP8S1</li>
     <li>$l10n.The <strong>$l10n.IssueId</strong> $l10n.UQP9</li>
-    <li>$l10n.The <em>$l10n.AdvancedQueries</em> $l10n.UQP10</li>
-    <li>$l10n.The <em>$l10n.CustomQueries</em> $l10n.UQP11</li>
-    <li>$l10n.The<em> $l10n.TextQueries</em> $l10n.UQP20</li>
+    <li><strong>$l10n.AdvancedQueries</strong> $l10n.UQP10</li>
+    <li><strong>$l10n.CustomQueries</strong> $l10n.UQP11</li>
+    <li><strong> $l10n.TextQueries</strong> $l10n.UQP20</li>
+    <li><strong>$l10n.MyIssues</strong> $l10n.UQP21</li>
+    <li><strong>$l10n.MostRecent</strong> $l10n.UQP12</li>
   </ul>
   <h4><a name="issueid" id="issueid">$l10n.SearchIssue</a></h4>
   <p>$l10n.UQP13S1 <strong>$l10n.IssueId</strong> $l10n.UQP13S2</p>
